--- a/packages/Garden Irrigation/irrigation_remote_control.yaml
+++ b/packages/Garden Irrigation/irrigation_remote_control.yaml
@@ -2,13 +2,12 @@
 #============
 #=== Sensors
 #============
-sensor:
-
+mqtt:
+  sensor:
   # Irrigation Remote Control
-  - platform: mqtt
-    name: Irrigation Remote Control
-    state_topic: "433/Irrigation_Remote_Control"
-    expire_after: 2
+    - name: Irrigation Remote Control
+      state_topic: "433/Irrigation_Remote_Control"
+      expire_after: 2
 
 
 #===================
@@ -114,7 +113,7 @@ automation:
         entity_id: input_boolean.irrigation_remote_control
 
     action:
-      - service: >
+      - service_template: >
           automation.turn_{{ states('input_boolean.irrigation_remote_control') }}
         data_template:
           entity_id: >
@@ -163,7 +162,7 @@ automation:
       - service: script.notify
         data:
           say: true
-          rooms:
+          sonos:
             - kitchen
           volume: 0.3
           message: Irrigation cancelled
@@ -199,7 +198,7 @@ automation:
       - service: script.notify
         data_template:
           say: true
-          rooms:
+          sonos:
             - kitchen
           volume: 0.3
           message: >
@@ -304,7 +303,7 @@ automation:
                 - service: script.notify
                   data:
                     say: True
-                    rooms:
+                    sonos:
                       - kitchen
                     volume: 0.3
                     message: "The irrigation appears to be already running"
@@ -556,6 +555,7 @@ script:
   #===   message: Announcement message
   #====================================
   irrigation_remote_control_run_cycle:
+    alias: Irrigation Remote Control Run Cycle
     sequence:
       - choose:
           #=== Warn if switches are disabled
@@ -567,7 +567,7 @@ script:
               - service: script.notify
                 data:
                   say: True
-                  rooms:
+                  sonos:
                     - kitchen
                   volume: 0.3
                   message: "Warning! The irrigation switches are disabled."
@@ -575,7 +575,7 @@ script:
       - service: script.notify
         data_template:
           say: true
-          rooms:
+          sonos:
             - kitchen
           volume: 0.3
           message: "{{ message }}"
@@ -606,6 +606,7 @@ script:
   #=== Set all Lawn zones
   #=======================
   irrigation_remote_set_all_lawn_zones:
+    alias: Irrigation Remote Set All Lawn Zones
     sequence:
       #=== Set Zone 1 duration
       - service: input_number.set_value
