--- a/esphome/ac-bw-rc1.yaml
+++ b/esphome/ac-bw-rc1.yaml
@@ -1,7 +1,7 @@
 esphome:
   name: $devicename
   platform: ESP8266
-  board: esp_wroom_02
+  board: nodemcuv2
   includes: 
     - gree_ir.h
   libraries:
