moved to the UI

--- a/cameras/weather_cams.yaml
+++ b/cameras/weather_cams.yaml
@@ -1,7 +1,7 @@
-  - platform: generic
-    name: erythres
-    still_image_url: !secret erythres_cam
-    verify_ssl: false
+  # - platform: generic
+  #   name: erythres
+  #   still_image_url: !secret erythres_cam
+  #   verify_ssl: false
   # - platform: generic
   #   name: erythres_2
   #   still_image_url: !secret erythres_cam_2
