--- a/cameras/combined.yaml
+++ b/cameras/combined.yaml
@@ -1,18 +1,18 @@
-- platform: combined
-  base_address: !secret base_url
-  entities:
-    - camera.eisodos_hd_mjpeg
-    - camera.veranta_hd_mjpeg
-    - camera.avli
-    - camera.kipos_mjpeg
-    - camera.kouzina_mjpeg
-    - camera.outside
-    - camera.koudoni_ttgocam_camera
+# - platform: combined
+#   base_address: !secret base_url
+#   entities:
+#     - camera.eisodos_hd_mjpeg
+#     - camera.veranta_hd_mjpeg
+#     - camera.avli
+#     - camera.kipos_mjpeg
+#     - camera.kouzina_mjpeg
+#     - camera.outside
+#     - camera.koudoni_ttgocam_camera
 
-- platform: combined
-  base_address: !secret base_url
-  entities:
-    - camera.eisodos_person
-    - camera.veranda_person
-    - camera.kipos_person
-    - camera.kouzina_person
+# - platform: combined
+#   base_address: !secret base_url
+#   entities:
+#     - camera.eisodos_person
+#     - camera.veranda_person
+#     - camera.kipos_person
+#     - camera.kouzina_person
