--- a/mosquitto/mqtt-bridge.conf
+++ b/mosquitto/mqtt-bridge.conf
@@ -1,8 +1,14 @@
-connection cloudmqtt
-address !secret cloudmqtt_address
-remote_username !secret cloudmqtt_username
-remote_password !secret cloudmqtt_password
-clientid porta_cam
+# connection cloudmqtt
+# address !secret cloudmqtt_address
+# remote_username !secret cloudmqtt_username
+# remote_password !secret cloudmqtt_password
+# clientid porta_cam
+# try_private false
+# start_type automatic
+# topic # in
+
+connection hivemq
+address broker.hivemq.com
 try_private false
 start_type automatic
-topic # in
+topic thanasis
